2005-02-15  William Jon McCann  <mccann@jhu.edu>

	* src/totem.c (move_popups): Position exit fullscreen button
	on right side per HIG.  (Closes #149135)

	* data/totem.glade: Use gtk-quit icon for exit fullscreen button.

2005-02-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (cb_iterate),
	(bacon_video_widget_set_audio_out_type):
	  Fix wrong return value types, fix missing ampersand.

2005-02-11  William Jon McCann  <mccann@jhu.edu>

	* src/totem.c (popup_timeout_remove) 
	(on_video_motion_notify_event, on_mouse_click_fullscreen) 
	(totem_callback_connect): Use glib timeout funcs.

	* data/totem.glade: Remove unneeded frame around Exit Fullscreen
	button.  Make fullscreen control buttons go to the edge of the
	screen. (Closes #166509)

2005-02-08  Christian Fredrik Kalager Schaller  <uraeus@gnome.org>

	* COPYING: adding with clause
	* COPYING.LIB: update with some comments about playlist-lib
	* license_change: add document outlining the license change
	* src/bacon-message-connection.c: adding clause to all files
	* src/bacon-message-connection.h:
	* src/bacon-v4l-selection.c:
	* src/bacon-v4l-selection.h:
	* src/bacon-video-widget-gst.c:
	* src/bacon-video-widget.h: fix copyright header
	* src/egg-recent-item.c:
	* src/egg-recent-model.c:
	* src/egg-recent-view-gtk.c:
	* src/egg-recent-view.c:
	* src/scrsaver.c: fix copyright header as original code is gone
	* src/totem-disc.c:
	* src/totem-gromit.c:
	* src/totem-interface.c:
	* src/totem-preferences.c:
	* src/totem-preferences.h:
	* src/totem-private.h:
	* src/totem-properties-main.c:
	* src/totem-properties-view.c:
	* src/totem-properties-view.h:
	* src/totem-remote.c:
	* src/totem-remote.h:
	* src/totem-stock-icons.c:
	* src/totem-stock-icons.h:
	* src/totem-video-thumbnailer.c:
	* src/totem.c:
	* src/totem.h:
	* src/vanity.c:
	* src/video-dev.c:
	* src/video-dev.h:

2005-02-08  Bastien Nocera  <hadess@hadess.net>
