@@ -1,3 +1,8 @@
+2005-02-16  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_set_volume):
+	You can't set a volume below 0 or above 100 (Closes: #165426)
+
 2005-02-15  William Jon McCann  <mccann@jhu.edu>
 
 	* src/totem.c (move_popups): Position exit fullscreen button
